--- a/RPCalculator/Views/menu.html
+++ b/RPCalculator/Views/menu.html
@@ -1,4 +1,4 @@
-﻿<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" ng-controller="menuController as $menu">
+﻿<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" ng-controller="menuController as $menu">
     <a class="navbar-brand" href="#">Skating System</a>
     <button type="button" class="navbar-toggler mr-2" ng-click="$menu.toggle($event)">
         <span class="navbar-toggler-icon"></span>
@@ -9,18 +9,6 @@
                 <a href="#" class="nav-link text-nowrap" ng-click="$menu.go('/workbook')">
                     <i class="fa fa-fw fa-home"></i>
                     <span>Home</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-nowrap" ng-click="$menu.upload($event)">
-                    <i class="fa fa-fw fa-upload"></i>
-                    <span>Upload</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-nowrap" ng-click="$menu.download($event)">
-                    <i class="fa fa-fw fa-download"></i>
-                    <span>Download</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -42,5 +30,21 @@
                 </a>
             </li>
         </ul>
+        <div class="m-auto"></div>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="#" class="nav-link text-nowrap" ng-click="$menu.upload($event)">
+                    <i class="fa fa-fw fa-folder-open"></i>
+                    <span>Open</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link text-nowrap" ng-click="$menu.download($event)">
+                    <i class="fa fa-fw fa-save"></i>
+                    <span>Save</span>
+                </a>
+            </li>
+        </ul>
+
     </div>
 </nav>
